tests/neg/i1212.scala
@ann class ann extends scala.annotation.Annotation // error: cyclic reference
